syntax = "proto3";

package calculator;

option go_package = "github.com/katarzynakawala/grpc-go/calculator/proto";

message CalcPrimesRequest{
    int32 digit = 1;
}

message PrimesResponse{
    int32 result = 1;
}